--- a/landing-page/src/css/general.css
+++ b/landing-page/src/css/general.css
@@ -1,9 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+
 }
 
 ul{
     list-style: none;
+}
+
+:root {
+    --grayCards: #BCBCBC;
+    --bannerColor: #AF0E4E;
+    --gray2: #555555;
+    --gray3: #00000080;
+    --gray4: #545454;
+    --mainBlue: #0D5C91;
+    --mainRed: #AF0200;
+    --white2: #F8F8F8;
+    --redSale: #E02020;
+}
+
+a {
+    text-decoration: none;
 }
