mobile version almost finished

--- a/landing-page/src/css/general.css
+++ b/landing-page/src/css/general.css
@@ -15,14 +15,16 @@ ul{
 :root {
     --grayCards: #BCBCBC;
     --bannerColor: #AF0E4E;
-    --gray2: #555555;
+    --grayOptionBar: #555555;
     --gray3: #00000080;
     --gray4: #545454;
-    --mainBlue: #0D5C91;
-    --mainRed: #AF0200;
+    --addToCart: #0D5C91;
+    --cardRed: #AF0200;
     --white2: #F8F8F8;
     --redSale: #E02020;
 }
+
+
 
 a {
     text-decoration: none;
