--- a/landing-page/src/css/styles.css
+++ b/landing-page/src/css/styles.css
@@ -1,2 +1,6 @@
 @import url(general.css);
 @import url(header.css);
+@import url(banner.css);
+@import url(optionsBar.css);
+@import url(ProductsPcTablet.css);
+@import url(cardProduct.css);
