--- a/landing-page/src/css/header.css
+++ b/landing-page/src/css/header.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 5px 0;
 }
 
 .iconList{
@@ -30,6 +31,7 @@
     display: flex;
     width: 93%;
     justify-content: space-between;
+    margin-bottom: 5px;
 }
 
 .iconBars{
