--- a/landing-page/src/css/banner.css
+++ b/landing-page/src/css/banner.css
@@ -3,7 +3,7 @@
     color: white;
     display: flex;
     justify-content: center;
-    height: 70px;
+    height: 55px;
     align-items: center;
 }
 
@@ -12,6 +12,7 @@
     font-weight: 100;
     letter-spacing: -0.13px;
     font-size: 14px;
+    text-align: center;
 }
 
 .banner span{
@@ -33,4 +34,10 @@
 .shop-now-container{
     display: flex;
     align-items: center;
+}
+
+@media (min-width: 1280px){
+    .banner p {
+        font-size: 16px;
+    }
 }
