--- a/landing-page/src/css/optionsBar.css
+++ b/landing-page/src/css/optionsBar.css
@@ -1,7 +1,7 @@
 .optionsBar-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     border: 1px solid black;
 }
 
@@ -9,9 +9,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 4px 10px;
+    margin: 5px 20px;
+    font-size: 18px;
 }
 
 .optionsBar-container li a{
     color: var(--grayOptionBar);
+}
+
+@media (min-width: 1280px) {
+    .optionsBar-container li{
+        margin: 15px 35px;
+        font-size: 24px;
+    }
 }
